# taig

cyber/darkweb-intel/: requirements.txt
cyber/darkweb-intel/config/: datasets.yaml  models.yaml
cyber/darkweb-intel/notebooks/: 01_data_ingestion.ipynb  02_eda_topics.ipynb
cyber/darkweb-intel/personal/: darkweb-intel-notes.md
cyber/darkweb-intel/src/taig/: __init__.py
cyber/darkweb-intel/src/taig/ingestion/: __main__.py  babuk.py  base.py  blackbasta.py
cyber/darkweb-intel/src/taig/utils/: __init__.py  logging.py  storage.py
cyber/darkweb-intel/tests/: test_ingestion.py
darkweb-intel/: .gitignore  README.md  pyproject.toml
darkweb-intel/config/: pipeline.yaml
darkweb-intel/src/taig/ingestion/: __init__.py  conti.py  lockbit.py  registry.py  schemas.py
darkweb-intel/src/taig/utils/: config.py
darkweb-intel/tests/: conftest.py
